cuts off bottom and right sides of map, BUT does absolute position endangered animal on same coordinate regardless of browser window size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h1 id="masthead">Endangered Species World Map</h1>
       </div>
       <div class="worldMap">
-        <img class="map" src="img/world-map-canvas.jpg" alt="World Map, map of the world"/>
+        <!-- <img class="map" src="img/world-map-canvas.jpg" alt="World Map, map of the world"/> -->
+            <img class="wallaby" src="img/wallaby.jpg" alt="Banded Hare Wallaby"/>
+            <!-- <img class="lemur" src="img/lemur.jpg" alt="Pygmy Mouse Lemur" />Pygmy Mouse Lemur</li> -->
       </div>
     </div>
   </body>
